--- a/css/scrollbar.css
+++ b/css/scrollbar.css
@@ -5,7 +5,7 @@
 }
 @media screen and (max-width: 48em) {
     ::-webkit-scrollbar{
-        display: none;
+        /* display: none; */
         -ms-overflow-style: none;  /* IE and Edge */
         scrollbar-width: none;
     }
